lib/src/raft.h

struct bop_raft_buffer;
struct bop_raft_async_buffer_ptr;
struct bop_raft_srv_config_ptr;
struct bop_raft_logger_ptr;
struct bop_raft_asio_service_ptr;
struct bop_raft_params {
    int32_t election_timeout_upper_bound;
    int32_t election_timeout_lower_bound;
    int32_t heart_beat_interval;
    int32_t rpc_failure_backoff;
    int32_t log_sync_batch_size;
    int32_t log_sync_stop_gap;
    int32_t snapshot_distance;
    int32_t snapshot_block_size;
    int32_t snapshot_sync_ctx_timeout;
    bool enable_randomized_snapshot_creation;
    int32_t max_append_size;
    int32_t reserved_log_items;
    int32_t client_req_timeout;
    int32_t fresh_log_gap;
    int32_t stale_log_gap;
    int32_t custom_commit_quorum_size;
    int32_t custom_election_quorum_size;
    int32_t leadership_expiry;
    int32_t leadership_transfer_min_wait_time;
    bool allow_temporary_zero_priority_leader;
    bool auto_forwarding;
    int32_t auto_forwarding_max_connections;
    bool use_bg_thread_for_urgent_commit;
    bool exclude_snp_receiver_from_quorum;
    bool auto_adjust_quorum_for_small_cluster;
    enum bop_raft_params_locking_method_type locking_method_type;
    enum bop_raft_params_return_method_type return_method;
    int32_t auto_forwarding_req_timeout;
    int32_t grace_period_of_lagging_state_machine;
    bool use_new_joiner_type;
    bool use_bg_thread_for_snapshot_io;
    bool use_full_consensus_among_healthy_members;
    bool track_peers_sm_commit_idx;
    bool parallel_log_appending;
    int32_t max_log_gap_in_stream;
    int64_t max_bytes_in_flight_in_stream;
};
struct bop_raft_fsm_ptr;
struct bop_raft_state_mgr_ptr;
struct bop_raft_log_entry;
struct bop_raft_append_entries_ptr;
struct bop_raft_server;
struct bop_raft_server_ptr;
struct bop_raft_cb_param {
    int32_t my_id;
    int32_t leader_id;
    int32_t peer_id;
    void *ctx;
};
struct bop_raft_cb_connection_args {
    uint64_t session_id;
    const char *address;
    size_t address_len;
    uint32_t port;
    int32_t srv_id;
    bool is_leader;
};
struct bop_raft_cb_req_resp;
struct bop_raft_cb_req_msg {
    uint64_t term;
    enum bop_raft_msg_type type;
    int32_t src;
    int32_t dst;
    uint64_t last_log_term;
    uint64_t last_log_idx;
    uint64_t commit_idx;
};
struct bop_raft_cb_resp_peer;
struct bop_raft_cb_resp_msg {
    uint64_t term;
    enum bop_raft_msg_type type;
    int32_t src;
    int32_t dst;
    uint64_t next_idx;
    int64_t next_batch_size_hint_in_bytes;
    bool accepted;
    struct bop_raft_buffer *ctx;
    struct bop_raft_cb_resp_peer *peer;
    enum bop_raft_cmd_result_code result_code;
};
BOP_API void bop_raft_cb_get_req_msg(struct bop_raft_cb_req_resp *req_resp, struct bop_raft_cb_req_msg *req_msg);
BOP_API size_t bop_raft_cb_get_req_msg_entries_size(const struct bop_raft_cb_req_resp *req_resp);
BOP_API struct bop_raft_log_entry *
bop_raft_cb_get_req_msg_get_entry(const struct bop_raft_cb_req_resp *req_resp, size_t idx);
BOP_API void
bop_raft_cb_get_resp_msg(struct bop_raft_cb_req_resp *req_resp, struct bop_raft_cb_resp_msg *resp_msg);
typedef enum bop_raft_cb_return_code (*bop_raft_cb_func)(
    void *user_data, enum bop_raft_cb_type type, struct bop_raft_cb_param *param
);
typedef uint64_t (*bop_raft_inc_term_func)(void *user_data, uint64_t current_term);
BOP_API struct bop_raft_server_ptr *bop_raft_server_launch(
    void *user_data,
    struct bop_raft_fsm_ptr *fsm,
    struct bop_raft_state_mgr_ptr *state_mgr,
    struct bop_raft_logger_ptr *logger,
    int32_t port_number,
    const struct bop_raft_asio_service_ptr *asio_service,
    struct bop_raft_params *params_given,
    bool skip_initial_election_timeout,
    bool start_server_in_constructor,
    bool test_mode_flag,
    bop_raft_cb_func cb_func
);
BOP_API bool bop_raft_server_stop(struct bop_raft_server_ptr *server, size_t time_limit_sec);
BOP_API struct bop_raft_server *bop_raft_server_get(struct bop_raft_server_ptr *s);
BOP_API bool bop_raft_server_is_initialized(const struct bop_raft_server *rs);
BOP_API bool bop_raft_server_is_catching_up(const struct bop_raft_server *rs);
BOP_API bool bop_raft_server_is_receiving_snapshot(const struct bop_raft_server *rs);
BOP_API bool bop_raft_server_add_srv(
    struct bop_raft_server *rs, const struct bop_raft_srv_config_ptr *srv, struct bop_raft_async_buffer_ptr *handler
);
BOP_API bool bop_raft_server_remove_srv(
    struct bop_raft_server *rs,
    int32_t srv_id,
    struct bop_raft_async_buffer_ptr *handler
);
BOP_API bool bop_raft_server_flip_learner_flag(
    struct bop_raft_server *rs,
    const int32_t srv_id,
    const bool to,
    struct bop_raft_async_buffer_ptr *handler
);
BOP_API bool bop_raft_server_append_entries(
    struct bop_raft_server *rs,
    struct bop_raft_append_entries_ptr *entries,
    struct bop_raft_async_buffer_ptr *handler
);
BOP_API enum bop_raft_server_priority_set_result bop_raft_server_set_priority(
    struct bop_raft_server *rs,
    const int32_t srv_id,
    const int32_t new_priority,
    bool broadcast_when_leader_exists
);