lib/src/uws.h


typedef void* uws_app_t;
typedef void* uws_res_t;
BOP_API void uws_app_listen(
    uws_app_t app,
    void* user_data,
    const char* host,
    size_t host_length,
    int port,
    int options,
    void (*handler)(void* listen_socket, void* user_data)
);
BOP_API void uws_app_listen_unix(
    uws_app_t app,
    void* user_data,
    const char* path,
    size_t path_length,
    int options,
    void (*handler)(void* listen_socket, void* user_data)
);
BOP_API void uws_res_cork(uws_res_t res, void* user_data, void (*handler)(uws_res_t res, void* user_data));
BOP_API void uws_res_on_writable(uws_res_t res, void* user_data, bool (*handler)(uws_res_t res, void* user_data, uint64_t m));
BOP_API void uws_res_on_aborted(uws_res_t res, void* user_data, void (*handler)(uws_res_t res, void* user_data));
BOP_API void uws_res_on_data(uws_res_t res, void* user_data, void (*handler)(uws_res_t res, void* user_data, const char* data, size_t data_length, bool fin));