rust/bop-rs/src/bindings.rs

impl Default for bop_raft_cb_connection_args {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const bop_raft_msg_type_bop_raft_msg_type_request_vote_request: bop_raft_msg_type = 1;
pub const bop_raft_msg_type_bop_raft_msg_type_request_vote_response: bop_raft_msg_type = 2;
pub const bop_raft_msg_type_bop_raft_msg_type_append_entries_request: bop_raft_msg_type = 3;
pub const bop_raft_msg_type_bop_raft_msg_type_append_entries_response: bop_raft_msg_type = 4;
pub const bop_raft_msg_type_bop_raft_msg_type_client_request: bop_raft_msg_type = 5;
pub const bop_raft_msg_type_bop_raft_msg_type_add_server_request: bop_raft_msg_type = 6;
pub const bop_raft_msg_type_bop_raft_msg_type_add_server_response: bop_raft_msg_type = 7;
pub const bop_raft_msg_type_bop_raft_msg_type_remove_server_request: bop_raft_msg_type = 8;
pub const bop_raft_msg_type_bop_raft_msg_type_remove_server_response: bop_raft_msg_type = 9;
pub const bop_raft_msg_type_bop_raft_msg_type_sync_log_request: bop_raft_msg_type = 10;
pub const bop_raft_msg_type_bop_raft_msg_type_sync_log_response: bop_raft_msg_type = 11;
pub const bop_raft_msg_type_bop_raft_msg_type_join_cluster_request: bop_raft_msg_type = 12;
pub const bop_raft_msg_type_bop_raft_msg_type_join_cluster_response: bop_raft_msg_type = 13;
pub const bop_raft_msg_type_bop_raft_msg_type_leave_cluster_request: bop_raft_msg_type = 14;
pub const bop_raft_msg_type_bop_raft_msg_type_leave_cluster_response: bop_raft_msg_type = 15;
pub const bop_raft_msg_type_bop_raft_msg_type_install_snapshot_request: bop_raft_msg_type = 16;
pub const bop_raft_msg_type_bop_raft_msg_type_install_snapshot_response: bop_raft_msg_type = 17;
pub const bop_raft_msg_type_bop_raft_msg_type_ping_request: bop_raft_msg_type = 18;
pub const bop_raft_msg_type_bop_raft_msg_type_ping_response: bop_raft_msg_type = 19;
pub const bop_raft_msg_type_bop_raft_msg_type_pre_vote_request: bop_raft_msg_type = 20;
pub const bop_raft_msg_type_bop_raft_msg_type_pre_vote_response: bop_raft_msg_type = 21;
pub const bop_raft_msg_type_bop_raft_msg_type_other_request: bop_raft_msg_type = 22;
pub const bop_raft_msg_type_bop_raft_msg_type_other_response: bop_raft_msg_type = 23;
pub const bop_raft_msg_type_bop_raft_msg_type_priority_change_request: bop_raft_msg_type = 24;
pub const bop_raft_msg_type_bop_raft_msg_type_priority_change_response: bop_raft_msg_type = 25;
pub const bop_raft_msg_type_bop_raft_msg_type_reconnect_request: bop_raft_msg_type = 26;
pub const bop_raft_msg_type_bop_raft_msg_type_reconnect_response: bop_raft_msg_type = 27;
pub const bop_raft_msg_type_bop_raft_msg_type_custom_notification_request: bop_raft_msg_type = 28;
pub const bop_raft_msg_type_bop_raft_msg_type_custom_notification_response: bop_raft_msg_type = 29;
pub type bop_raft_msg_type = i32;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_OK: bop_raft_cmd_result_code = 0;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_CANCELLED: bop_raft_cmd_result_code = -1;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_TIMEOUT: bop_raft_cmd_result_code = -2;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_NOT_LEADER: bop_raft_cmd_result_code = -3;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_BAD_REQUEST: bop_raft_cmd_result_code = -4;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_SERVER_ALREADY_EXISTS:
    bop_raft_cmd_result_code = -5;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_CONFIG_CHANGING: bop_raft_cmd_result_code =
    -6;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_SERVER_IS_JOINING: bop_raft_cmd_result_code =
    -7;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_SERVER_NOT_FOUND: bop_raft_cmd_result_code =
    -8;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_CANNOT_REMOVE_LEADER:
    bop_raft_cmd_result_code = -9;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_SERVER_IS_LEAVING: bop_raft_cmd_result_code =
    -10;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_TERM_MISMATCH: bop_raft_cmd_result_code =
    -11;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_RESULT_NOT_EXIST_YET:
    bop_raft_cmd_result_code = -10000;
pub const bop_raft_cmd_result_code_BOP_RAFT_CMD_RESULT_FAILED: bop_raft_cmd_result_code = -32768;
pub type bop_raft_cmd_result_code = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cb_req_resp {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cb_req_msg {
    pub term: u64,
    pub type_: bop_raft_msg_type,
    pub src: i32,
    pub dst: i32,
    pub last_log_term: u64,
    pub last_log_idx: u64,
    pub commit_idx: u64,
}
impl Default for bop_raft_cb_req_msg {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cb_resp_peer {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cb_resp_msg {
    pub term: u64,
    pub type_: bop_raft_msg_type,
    pub src: i32,
    pub dst: i32,
    pub next_idx: u64,
    pub next_batch_size_hint_in_bytes: i64,
    pub accepted: bool,
    pub ctx: *mut bop_raft_buffer,
    pub peer: *mut bop_raft_cb_resp_peer,
    pub result_code: bop_raft_cmd_result_code,
}
impl Default for bop_raft_cb_resp_msg {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn bop_raft_cb_get_req_msg(
        req_resp: *mut bop_raft_cb_req_resp,
        req_msg: *mut bop_raft_cb_req_msg,
    );
}
unsafe extern "C" {
    pub fn bop_raft_cb_get_req_msg_entries_size(req_resp: *const bop_raft_cb_req_resp) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_cb_get_req_msg_get_entry(
        req_resp: *const bop_raft_cb_req_resp,
        idx: usize,
    ) -> *mut bop_raft_log_entry;
}
unsafe extern "C" {
    pub fn bop_raft_cb_get_resp_msg(
        req_resp: *mut bop_raft_cb_req_resp,
        resp_msg: *mut bop_raft_cb_resp_msg,
    );
}
pub type bop_raft_cb_func = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        type_: bop_raft_cb_type,
        param: *mut bop_raft_cb_param,
    ) -> bop_raft_cb_return_code,
>;
pub type bop_raft_inc_term_func = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, current_term: u64) -> u64,
>;
unsafe extern "C" {
    pub fn bop_raft_server_launch(
        user_data: *mut ::std::os::raw::c_void,
        fsm: *mut bop_raft_fsm_ptr,
        state_mgr: *mut bop_raft_state_mgr_ptr,
        logger: *mut bop_raft_logger_ptr,
        port_number: i32,
        asio_service: *const bop_raft_asio_service_ptr,
        params_given: *mut bop_raft_params,
        skip_initial_election_timeout: bool,
        start_server_in_constructor: bool,
        test_mode_flag: bool,
        cb_func: bop_raft_cb_func,
    ) -> *mut bop_raft_server_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_server_stop(server: *mut bop_raft_server_ptr, time_limit_sec: usize) -> bool;
}
unsafe extern "C" {
    pub fn bop_raft_server_get(s: *mut bop_raft_server_ptr) -> *mut bop_raft_server;
}
unsafe extern "C" {
    #[doc = " Check if this server is ready to serve operation.\n\n @return `true` if it is ready."]
    pub fn bop_raft_server_is_initialized(rs: *const bop_raft_server) -> bool;
}
unsafe extern "C" {
    #[doc = " Check if this server is catching up the current leader\n to join the cluster.\n\n @return\n `true` if it is in catch-up mode."]
    pub fn bop_raft_server_is_catching_up(rs: *const bop_raft_server) -> bool;
}
unsafe extern "C" {
    #[doc = " Check if this server is receiving snapshot from leader.\n\n @return `true` if it is\n receiving snapshot."]
    pub fn bop_raft_server_is_receiving_snapshot(rs: *const bop_raft_server) -> bool;
}
unsafe extern "C" {
    #[doc = " Add a new server to the current cluster. Only leader will accept this operation.\n Note that this is an asynchronous task so that needs more network communications.\n Returning this function does not guarantee adding the server.\n\n @param srv Configuration of server to add.\n @return `get_accepted()` will be true on success."]
    pub fn bop_raft_server_add_srv(
        rs: *mut bop_raft_server,
        srv: *const bop_raft_srv_config_ptr,
        handler: *mut bop_raft_async_buffer_ptr,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Remove a server from the current cluster. Only leader will accept this operation.\n The same as `add_srv`, this is also an asynchronous task.\n\n @param srv_id ID of server to remove.\n @return `get_accepted()` will be true on success."]
    pub fn bop_raft_server_remove_srv(
        rs: *mut bop_raft_server,
        srv_id: i32,
        handler: *mut bop_raft_async_buffer_ptr,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Flip learner flag of given server. Learner will be excluded from the quorum. Only\n leader will accept this operation. This is also an asynchronous task.\n\n @param srv_id ID of the server to set as a learner.\n @param to If `true`, set the server as a learner, otherwise, clear learner flag.\n @return `ret->get_result_code()` will be OK on success."]
    pub fn bop_raft_server_flip_learner_flag(
        rs: *mut bop_raft_server,
        srv_id: i32,
        to: bool,
        handler: *mut bop_raft_async_buffer_ptr,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Append and replicate the given logs. Only leader will accept this operation.\n\n @param entries Set of logs to replicate.\n @return\n     In blocking mode, it will be blocked during replication, and\n     return `cmd_result` instance which contains the commit results from\n     the state machine.\n\n     In async mode, this function will return immediately, and the commit\n     results will be set to returned `cmd_result` instance later."]
    pub fn bop_raft_server_append_entries(
        rs: *mut bop_raft_server,
        entries: *mut bop_raft_append_entries_ptr,
        handler: *mut bop_raft_async_buffer_ptr,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Update the priority of given server.\n\n @param rs local bop_raft_server instance\n @param srv_id ID of server to update priority.\n @param new_priority Priority value, greater than or equal to 0.\n        If priority is set to 0, this server will never be a leader.\n @param broadcast_when_leader_exists If we're not a leader and a\n        leader exists, broadcast priority change to other peers.\n        If false, set_priority does nothing. Please note that\n        setting this option to true may possibly cause cluster config\n        to diverge.\n @return SET If we're a leader and we have committed priority change.\n @return BROADCAST\n     If either there's no\n         live leader now, or we're a leader, and we want to set our priority to 0,\n\n         or we're not a leader and broadcast_when_leader_exists = true.\n         We have sent messages to other peers about priority change but haven't\n         committed this change.\n @return IGNORED If we're not a leader and broadcast_when_leader_exists = false.\n"]
    pub fn bop_raft_server_set_priority(
        rs: *mut bop_raft_server,
        srv_id: i32,
        new_priority: i32,
        broadcast_when_leader_exists: bool,
    ) -> bop_raft_server_priority_set_result;
}
